--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ include(FindGLFW)
 #Include-directory
 include_directories("${CMAKE_SOURCE_DIR}/include")
 
+#Enable C++0xB
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
 #Find required packages
 find_package(OpenGL REQUIRED)
 find_package(GLFW REQUIRED)
