--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 #Find required packages
 find_package(OpenGL REQUIRED)
 find_package(GLFW REQUIRED)
+find_package(FLEX REQUIRED)
+find_package(BISON REQUIRED)
 
 #Add GL Load source folder
 add_subdirectory(glload)
