Collision detection: VClip algorithm

--- a/src/collisiondetection/CMakeLists.txt
+++ b/src/collisiondetection/CMakeLists.txt
@@ -1,6 +1,6 @@
 #Collision detection library
-set(awesomecollisions_INCS boundingvolume.hpp axisalignedboundingbox.hpp objectorientedboundingbox.hpp collidable.hpp)
+set(awesomecollisions_INCS boundingvolume.hpp axisalignedboundingbox.hpp objectorientedboundingbox.hpp collidable.hpp vclip.hpp)
 
-set(awesomecollisions_SRCS axisalignedboundingbox.cpp objectorientedboundingbox.cpp)
+set(awesomecollisions_SRCS axisalignedboundingbox.cpp objectorientedboundingbox.cpp vclip.cpp)
 
 add_library(awesomecollisions STATIC ${awesomecollisions_SRCS} ${awesomecollisions_INCS})
