Add Asteroid and seed them random in the galaxy

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,8 +2,8 @@ add_subdirectory(collisiondetection)
 add_subdirectory(modelloader)
 add_subdirectory(renderer)
 
-set(awesomegame_INCS tunnelsegment.hpp tunnelgenerator.hpp player.hpp)
-set(awesomegame_SRCS tunnelsegment.cpp tunnelgenerator.cpp player.cpp)
+set(awesomegame_INCS asteroid.hpp player.hpp)
+set(awesomegame_SRCS asteroid.cpp player.cpp)
 
 #Build main executable
 add_executable(awesomegame main.cpp ${awesomegame_INCS} ${awesomegame_SRCS})
